Fixed notification hidden behind image

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -29,4 +29,5 @@ div.notification.copy-notification {
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 999;
 }
